--- a/SOURCE/FrontEnd/scss/main_defaults.scss
+++ b/SOURCE/FrontEnd/scss/main_defaults.scss
@@ -1,10 +1,8 @@
-* {
-  border: 1px solid rgb(31, 3, 3);
-  padding: 1em;
-  &:hover {
-    border: 1px solid red;
-    background: rgba(0, 0, 0, 0.35);
-  }
+body * {
+  outline: none;
+  border: none;
+  padding: .25em .5em;
+  margin: 0em;
 }
 
 html {
@@ -15,8 +13,10 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  font-size: 20px;
+  font-size: 16px;
   font-family: monospace;
+  background: #ffffff0a;
+  gap: 1em;
 }
 
 .page_section {
@@ -25,6 +25,11 @@ body {
   flex: 1;
   align-items: center;
   justify-content: center;
+  background: #ffffff0d;
+}
+
+.section_side {
+  max-width: 50%;
 }
 
 @media screen and (min-width: 768px) {
