--- a/PUBLIC/assets/style/css/main_defaults.css
+++ b/PUBLIC/assets/style/css/main_defaults.css
@@ -30,3 +30,7 @@ body {
 @media screen and (min-width: 768px) {
   .page_section {
     flex-direction: row; } }
+
+img {
+  width: 100%;
+  height: auto; }
